[BACKLOG-15721] Fix for truncated breadcrumb extra item color per UX (#4123)

--- a/plugins/file-open-save/core/src/main/javascript/app/components/breadcrumb/breadcrumb.css
+++ b/plugins/file-open-save/core/src/main/javascript/app/components/breadcrumb/breadcrumb.css
@@ -61,6 +61,7 @@ breadcrumb .breadcrumbFolder.extra .breadcrumbExtraItem {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  color: #333;
 }
 
 breadcrumb .breadcrumbFolder.extra .breadcrumbExtraItem:hover {
